src/test/ui/issues/issue-32655.stderr
error: cannot find attribute macro `derive_Clone` in this scope
  --> $DIR/issue-32655.rs:3:11
   |
LL |         #[derive_Clone]
   |           ^^^^^^^^^^^^
...
LL | foo!();
   | ------- in this macro invocation

error: cannot find attribute macro `derive_Clone` in this scope
  --> $DIR/issue-32655.rs:15:7
   |
LL |     #[derive_Clone]
   |       ^^^^^^^^^^^^

error: aborting due to 2 previous errors

